<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/header_background"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="actually drops them like a boss"
        android:textColor="@color/header_foreground"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="120"
        android:background="@color/background"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/homeScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I vent sus"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I cap fr"
                android:textSize="100sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/studyButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/nav_background_study"
        android:gravity="center"
        android:text="TRYB NAUKI"
        android:textColor="@color/nav_foreground_study"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/nav_background"
        android:orientation="horizontal"
        android:paddingBottom="3sp">

        <LinearLayout
            android:id="@+id/timetableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fa_regular"
                android:gravity="center"
                android:text="@string/timetable_icon"
                android:textColor="@color/nav_foreground"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timetable_label"
                android:textAllCaps="true"
                android:textColor="@color/nav_foreground"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/examsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fa_solid"
                android:gravity="center"
                android:text="@string/exams_icon"
                android:textColor="@color/nav_foreground"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exams_label"
                android:textAllCaps="true"
                android:textColor="@color/nav_foreground"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gradesLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fa_solid"
                android:gravity="center"
                android:text="@string/grades_icon"
                android:textColor="@color/nav_foreground"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/grades_label"
                android:textAllCaps="true"
                android:textColor="@color/nav_foreground"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fa_solid"
                android:gravity="center"
                android:text="@string/settings_icon"
                android:textColor="@color/nav_foreground"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settings_label"
                android:textAllCaps="true"
                android:textColor="@color/nav_foreground"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>